# it-markdown

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  SPEC.md  install-skill.sh  package-lock.json  package.json  tsconfig.json  需求文档.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy-playground.yml  render-markdown.yml
docs/: ai-authoring.md  browser-wasm-bundle.md  commonmark-forum-draft.md  extension-process.md  github-actions.md  github-pages-playground.md  lsp-diagnostics.md  roadmap-github-projects.md  security-model.md  standardization.md
editors/vscode-it-markdown/: CHANGELOG.md  README.md  extension.js  package.json
examples/: demo.html  plan-mode-demo.md  sample.md
examples/md-notepad-rust/: Cargo.toml
examples/md-notepad-rust/src/: main.rs  test_save.rs
examples/playground/: README.md  index.html  package-lock.json  package.json  vite.config.ts
examples/ssg-minimal/: README.md  build.mjs  input.md  package-lock.json  package.json
fixtures/: README.md
it-md-notepad/: README.md  index.html  package-lock.json  package.json  vite.config.ts
it-md-notepad/src/: main.ts
schemas/: control-destinations.schema.json
scripts/: gen-fixtures.mjs  seed-bulk-fixtures.mjs
src/: cli.ts  conformance.test.ts  index.ts  link-paren.test.ts  link-paren.ts  micromark-compat.test.ts  micromark-itmarkdown.ts  micromark-prototype.test.ts  micromark-prototype.ts  parse-attrs.test.ts  parse-attrs.ts  parse.test.ts  parse.ts  render.test.ts  render.ts  types.ts
(+230 files in other folders)
